bugfix: updated container background to hide expand/collapse glitches

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -72,6 +72,7 @@ div#main-content {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  background-color: mediumslateblue;
 }
 
 footer#main-footer {
